# tech-blog-backend

./: .env  .gitignore  .tool-versions  Dockerfile  Makefile  README.md  build-dev-env.md  compose.yaml  docker-compose-mac.yaml  docker-compose.yaml  docker.md  renovate.json  ssl.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/.workflows/: build-test.yaml
.github/workflows/: build-test.yaml  docker-app-push.yaml  docker-batch-qiita.yaml  docker-elasticsearch-push.yaml  docker-migration-push.yaml  docker-push.yaml  go-build.yaml  go-testing.yaml  go-vet.yaml  reviewdog.yaml
api_docs/: auth.md  top.md
backend/: Dockerfile  configs.yaml  go.mod  go.sum  main.go
backend/auth/: jwt.go
backend/cache/: redis.go
backend/cmd/: main.go
backend/config/: new.go
backend/controller/: user.go
backend/controllers/: user.go
backend/handler/: article.go  (+2 more)
batch/qiita/:  .dockerignore  .env  Cargo.toml  Dockerfile  README.md  my-qiita-blog.json
batch/qiita/src/: entity.rs  main.rs  qiita_response.rs  tag_category_map.rs  tag_map.rs
elasticsearch/: Dockerfile
migrations/: .dockerignore  20220729215036_create_user.sql  20220901232246_create_article_table.sql  20220901234508_add_test_article.sql  20220911004234_add_user_references_in_article.sql  20221013200749_create_category.sql  20221013202627_add_test_category_data.sql  20221013203344_create_tag.sql  20221013204412_add_test_tag_data.sql  Dockerfile  README.md  docker.md  entrypoint.sh
nginx/: Dockerfile  nginx.conf
scripts/: docker-start.sh  docker-stop.sh
src/: Dockerfile  configs.yaml  go.mod  go.sum
(+281 files in other folders)
